--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_01"
-author: "Math_116"
-date: "Fall semester"
+author: "Laizha Grajeda De Leon"
+date: "Summer 2022"
 output: html_document
 ---
 
